--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -133,8 +133,8 @@ jobs:
           git add CHANGELOG.md
           if ! git diff --cached --quiet; then
             echo "Commit pushing"
-            git config --local user.email "chen08209@gmail.com"
-            git config --local user.name "chen08209"
+            git config --local user.email "definitely3456@hotmail.com"
+            git config --local user.name "kaliyom"
             git commit -m "Update changelog"
             git push
             if [ $? -eq 0 ]; then
